<resources>
    <string name="app_name">PersonasMaterialClase</string>
    <string name="action_settings">Settings</string>
    <string name="agregar">Agregar</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mensaje_error_vacio">Digite la información faltante</string>
    <string name="mensaje_persona_guardada">Persona guardada exitosamente!</string>
    <string name="mensaje_seleccion_imagen">seleccione la imagen</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mensaje_error_cedula_existente">Cédula existente</string>
    <string name="mensaje_persona_modificada_exitosamente">Persona Modificada Exitosamente</string>
    <string name="mensaje_ventana_eliminar">¿Desea eliminar esta persona?</string>
    <string name="opcion_positivo">Si</string>
    <string name="mensaje_negativo">No</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="digite_contraseña">Digite contraseña</string>
    <string name="digite_usuario">Digite usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">femenino</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>



</resources>
